<resources>
    <string name="app_name">Evocab</string>
    <string name="already_have_an_account">Đã có tài khoản?</string>
    <string name="login">Đăng nhập</string>
    <string name="signup">Đăng ký</string>
    <string name="password">Mật khẩu</string>
    <string name="username">Tên đăng nhập</string>
    <string name="gorgotpass">Quên mật khẩu</string>
    <string name="enterEmail">Nhập địa chỉ email</string>
    <string name="send">Gửi</string>
    <string name="enterVerifiCode">Nhập mã xác nhận</string>
    <string name="VerifiCodeErorrMess">Mã xác nhận chưa đúng</string>
    <string name="email_error_mess">Email không đúng</string>
    <string name="username_error_mess">Tên đăng nhập không đúng</string>
    <string name="pass_error_mess">Mật khẩu không đúng</string>
    <string name="username_format">Ít nhất 3 ký tự gồm chữ thường, chữ in hoa, dấu gạch dưới</string>
    <string name="username_already">Username đã tồn tại</string>
    <string name="pass_format"> Ít nhất 8 ký tự gồm chữ hoa, chữ thường, số, ký tự đặc biệt</string>
    <string name="email_format">Email chưa đúng định dạng</string>
    <string name="email_ALready">Email đã tồn tại</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="enter_new_pass">Nhập mật khẩu mới</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change">Thay đổi</string>
    <string name="dialog_name_change_user">Đổi tên người dùng</string>
    <string name="dialog_name_change_email">Đổi Email</string>
    <string name="dialog_name_change_password">Đổi mật khẩu</string>
    <string name="dialog_name_change_date">Đổi ngày sinh</string>
    <string name="old_username">Tên người dùng cũ</string>
    <string name="old_pass">Mật khẩu cũ</string>
    <string name="old_email">Địa chỉ email cũ</string>
    <string name="new_email">Địa chỉ email mới</string>
    <string name="new_pass_again">Xác nhận mật khẩu mới</string>
    <string name="new_username">Tên người dùng mới</string>
    <string name="confirm_username">Xác nhận lại tên người dùng</string>
    <string name="notify_on">Thông báo đã được bật</string>
    <string name="notify_off">Thông báo đã được tắt</string>
    <string name="report_text">Báo cáo lỗi</string>
    <string name="grammar_error">Lỗi ngữ pháp</string>
    <string name="vocabulary_error">Lỗi từ vựng</string>
    <string name="game_bug">Lỗi trò chơi</string>
    <string name="meaning_error">Lỗi nghĩa</string>
    <string name="string_learning_how_long">Bạn đã học liên tục 30 ngày</string>
    <string name="string_username">Username</string>
    <string name="string_family">Family</string>
    <string name="string_user_gmail">usercontact@gmail.com</string>
    <string name="string_user_date">10/10/2000</string>
    <string name="message_error_new_password_encorrect">Mật khẩu nhập lại chưa khớp</string>
    <string name="hint_rewrite_password">Nhập lại mật khẩu</string>
    <string name="avt_description">This is user\'s avt</string>
    <string name="percent">0%</string>
    <string name="script">What do you want \nto do to day</string>
    <string name="test">Test</string>
    <string name="remembered">Word Remember</string>
    <string name="practice">Practice</string>
    <string name="missed">Word Missed</string>
    <string name="topic">Change Topic</string>
</resources>