<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newPassFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_signup">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="450dp"
        android:layout_height="226dp"
        android:src="@drawable/vector_2signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_name_acti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/new_password"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="365dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_input_signup_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name_acti"
        app:layout_constraintVertical_bias="0.16000003">

        <TextView
            android:id="@+id/passw_error_mess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass_format"
            android:textColor="@color/red"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@+id/enter_pass"
            app:layout_constraintEnd_toEndOf="@+id/enter_pass"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="@+id/enter_pass" />

        <LinearLayout
            android:id="@+id/enter_pass"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_input"
            android:elevation="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_request">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/padlock"
                app:tint="#80000000"
                tools:layout_editor_absoluteX="27dp"
                tools:layout_editor_absoluteY="91dp" />

            <EditText
                android:id="@+id/edt_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="12dp"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/color_text_input"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/passw_again_error_mess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_error_new_password_encorrect"
            android:textColor="@color/red"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@+id/enter_pass_again"
            app:layout_constraintEnd_toEndOf="@+id/enter_pass_again"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toStartOf="@+id/enter_pass_again" />

        <LinearLayout
            android:id="@+id/enter_pass_again"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_input"
            android:elevation="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_pass">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/padlock"
                app:tint="#80000000"
                tools:layout_editor_absoluteX="27dp"
                tools:layout_editor_absoluteY="91dp" />

            <EditText
                android:id="@+id/edt_pass_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="12dp"
                android:background="@null"
                android:hint="@string/hint_rewrite_password"
                android:inputType="textPassword"
                android:textColor="@color/color_text_input"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="70dp"
            android:background="@drawable/bg_btn_login_signup"
            android:text="@string/send"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_pass_again"></Button>

        <TextView
            android:id="@+id/txt_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/enter_new_pass"
            android:textColor="@color/color_text_input"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_send"
            app:layout_constraintStart_toStartOf="@+id/btn_send"
            app:layout_constraintTop_toBottomOf="@+id/btn_send">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Trở lại "
                android:textSize="15sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="55dp"
                tools:layout_editor_absoluteY="13dp" />

            <TextView
                android:id="@+id/txt_login_change_acti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Đăng nhập"
                android:textColor="@color/red"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="97dp"
                tools:layout_editor_absoluteY="13dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" hoặc "
                android:textSize="15sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="164dp"
                tools:layout_editor_absoluteY="13dp" />

            <TextView
                android:id="@+id/txt_signup_change_acti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Đăng ký"
                android:textColor="@color/red"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="201dp"
                tools:layout_editor_absoluteY="13dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="116dp"
        android:layout_height="115dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.00999999" />

</androidx.constraintlayout.widget.ConstraintLayout>