<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_signup">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="450dp"
        android:layout_height="226dp"
        android:src="@drawable/vector_2signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_name_acti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="27dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_input_signup_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name_acti"
        app:layout_constraintVertical_bias="0.16000003">

        <TextView
            android:id="@+id/username_error_mess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_format"
            android:textColor="@color/red"
            android:textSize="11dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="@+id/linearLayout2" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_input"
            android:elevation="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.060000002">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/user"
                app:tint="#80000000"
                tools:layout_editor_absoluteX="27dp"
                tools:layout_editor_absoluteY="91dp" />

            <EditText
                android:id="@+id/edt_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="12dp"
                android:background="@null"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textColor="@color/color_text_input"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_input"
            android:elevation="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/padlock"
                app:tint="#80000000"
                tools:layout_editor_absoluteX="27dp"
                tools:layout_editor_absoluteY="91dp" />

            <EditText
                android:id="@+id/edt_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="12dp"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="numberPassword"
                android:textColor="@color/color_text_input"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/email_error_mess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_format"
            android:textColor="@color/red"
            android:textSize="11dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="@+id/linearLayout3" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_input"
            android:elevation="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/email"
                app:tint="#80000000"
                tools:layout_editor_absoluteX="27dp"
                tools:layout_editor_absoluteY="91dp" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="12dp"
                android:background="@null"
                android:hint="Email"
                android:inputType="textPersonName"
                android:textColor="@color/color_text_input"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:background="@drawable/bg_btn_login_signup"
            android:text="@string/signup"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            app:layout_constraintVertical_bias="0.38"></Button>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Đã có tài khoản?"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_signup"
            app:layout_constraintVertical_bias="0.58000004" />

        <TextView
            android:id="@+id/txt_login_change_acti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/login"
            android:textColor="#FF0000"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <TextView
            android:id="@+id/passw_error_mess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass_format"
            android:textColor="@color/red"
            android:textSize="11dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="@+id/linearLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="116dp"
        android:layout_height="115dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.00999999" />

</androidx.constraintlayout.widget.ConstraintLayout>