<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dl_setting"
        android:background="@drawable/bg_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_name_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialog_name_change_email"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.060000002" />


        <TextView
            android:id="@+id/edt_old_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_input_signup_login"
            android:ems="10"
            android:hint="@string/old_email"
            android:text="Dinhthi1440@gmail.com"
            android:textColor="@color/color_text_input"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="@+id/txt_name_dialog"
            app:layout_constraintStart_toStartOf="@+id/txt_name_dialog"
            app:layout_constraintTop_toBottomOf="@+id/txt_name_dialog" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cha1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintEnd_toEndOf="@+id/edt_old_user"
            app:layout_constraintStart_toStartOf="@+id/edt_old_user"
            app:layout_constraintTop_toBottomOf="@+id/edt_old_user">

            <EditText
                android:id="@+id/edt_new_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input_signup_login"
                android:ems="10"
                android:hint="@string/new_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/color_text_input"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_btn_dialog"
            android:text="Đổi"
            android:textSize="14dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cha1"
            app:layout_constraintHorizontal_bias="0.253"
            app:layout_constraintStart_toStartOf="@+id/cha1"
            app:layout_constraintTop_toBottomOf="@+id/cha1"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_cencal"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_btn_dialog"
            android:text="Hoàn tác"
            android:textSize="14dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btn_ok"
            app:layout_constraintEnd_toEndOf="@+id/cha1"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="@+id/cha1"
            app:layout_constraintTop_toTopOf="@+id/btn_ok"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>